stashing this for now, may come back to it